--- a/gif2.html
+++ b/gif2.html
@@ -30,7 +30,7 @@ color:black;
 &nbsp<br>&nbsp
 &nbsp<br>&nbsp
 <marquee scrollamount="4" direction="right">
-<img src="C:\Users\Lenovo\Desktop\animation\h.jpg" width="500" heigth="400">
+<img src="https://th.bing.com/th/id/R.8ecfe6fbeefe159a1608daed440fa443?rik=AwJqErvdJFwayg&riu=http%3a%2f%2fyesofcorsa.com%2fwp-content%2fuploads%2f2017%2f05%2fHospital-Wallpaper-HQ.jpg&ehk=qi5s3Ock1OQupE3u%2fxIkXt6CFLugU8PZCVlzj1vr8CI%3d&risl=&pid=ImgRaw&r=0" width="500" heigth="400">
 
 </marquee>
 
